[package]
name = "rust-diskann"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/jianshu93/rust-diskann"
description = "A native Rust implementation of DiskANN (Disk-based Approximate Nearest Neighbor search)"
license = "MIT" 
keywords = [
    "similarity-search",
    "Vector-Search",
    "Vamana-graph",
    "Nearest-Neighbours",
    "Memory-map",
]
categories = ["algorithms", "database", "data-structures", "science"]


[lib]
name = "rust_diskann"
crate-type = ["cdylib", "rlib"]


[dependencies]
rand = "0.8"
memmap2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
bytemuck = "1.14"
rayon = "1.10"
ndarray = { version = "0.16" }
anndists = {version = "0.1.3", default-features = false, features = ["stdsimd"]}
log = { version = "0.4" }

[dev-dependencies]
hdf5 = {package = "hdf5-metno", version = "0.10.0" }
cpu-time = "1.0.0"
byteorder = "1.5.0"
hnsw_rs = {version = "0.3.2", default-features = false, features = ["stdsimd"]}